# CMakeProject1

./: CMakeLists.txt  allocator.c  allocator.h  datatypes.c  datatypes.h  defs.h  game.c  graphics.c  graphics.h  opengl.c  opengl.h  platform.h  win32.c
ref/: keyboard scan codes.xlsx
shaders/: 2d_abs.vert  borders.frag  tiles.frag  tiles.vert  uniform.frag
src/: conway.c  conway.h  datatypes.h  game.c  graphics.c  graphics.h  platform.h  rts.c  rts.h  win32.c
